fix overflow herocontent

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 /* --------------------------------------------- */
 
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1200px) {
   html {
     font-size: 45%;
   }
@@ -39,15 +39,21 @@ section{
 
 @keyframes asthma { 0%, 100% {transform: translate(-50%,-50%);} 50% {transform: translate(-50%,calc(-50% + 0.4rem));}}
 
+@media screen and (max-width: 1200px) {
+  .herocontent a{
+    font-size: 12rem;
+  }
+}
+
 .herocontent a:hover{
   filter:blur(5px);
   opacity: 0.25;
-  transition: cubic-bezier(0.48, 0, 0.32, 1.05) .85s;
+  transition: cubic-bezier(0.48, 0, 0.32, 1.05) .65s;
 }
 
 .herocontent a:not(:hover){
   letter-spacing: 0px;
-  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .85s;
+  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .65s;
 }
 
 .herocontent h1{
@@ -70,14 +76,14 @@ section{
 
 .herocontent a:hover + h1{
   filter:blur(0);
-  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .85s;
+  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .65s;
   transition-delay: 0.25s;
   opacity: 1;
 }
 
 .herocontent a:not(:hover) + h1{
   filter:blur(3px);
-  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .85s;
+  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .65s;
   opacity: 0.45;
 }
 
@@ -91,7 +97,7 @@ section{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: solid #000 5rem;
+  border: solid var(--c3) 5rem;
   opacity: 0.35;
   box-sizing: border-box;
   box-shadow: 0 0 10px rgba(255,255,255,.5),
@@ -108,7 +114,7 @@ section{
 }
 
 .herocontent a:not(:hover) + h1::after{
-  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .5s;
+  transition: cubic-bezier(0.38, -0.35, 0.32, 1.05) .4s;
   width: 32rem;
   height: 32rem;
   border: solid #999 5rem;
@@ -131,7 +137,7 @@ section{
   cursor: pointer;
   transition: .35s ease-in-out;
   text-align: left;
-  color: var(--c1);
+  color: var(--c5);
   font-family: 'italic', sans-serif;
   line-height: 3.3rem;
 }
