--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@
   --c1: #3d4248;
   --c2: #616161;
   /* --c3: #db541a; */
-  --c3: #a29c6c;
+  --c3: #c0ad7e;
   --c4: #bdbdbd;
   --c5: #f8f9fb;
   --c6: #b6c1d3;
@@ -78,6 +78,7 @@ html {
   font-size: 62.5%;
   background-color: #c1c2c9;
   color: var(--c0);
+  overflow-x: hidden;
 }
 
 /* CUSTOMIZED SCROLLBAR */
